<?xml version="1.0" encoding="utf-8"?>
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
          android:fillViewport="true"
           >

         <LinearLayout 
           android:gravity="start" 
           android:orientation="vertical" 
           android:paddingLeft="40.0dip"
           android:paddingTop="0.0dip" 
           android:paddingRight="40.0dip" 
           android:layout_width="fill_parent" 
           android:layout_height="wrap_content"
          >


             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_name"
                 android:layout_marginTop="27dp"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <EditText
                 android:id="@+id/new_eventName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="none"
                 android:singleLine="true" >

                 <requestFocus />
                 
             </EditText>

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_description"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <EditText
                 android:id="@+id/new_eventDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:onClick="showTextDialog"
                 android:inputType="none"
                 android:focusableInTouchMode="false"
                 android:focusable="false"
                 android:singleLine="true" />

             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_date"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <EditText
                 android:id="@+id/new_eventDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="none"
                 android:onClick="showDatePickerDialog"
                 android:focusableInTouchMode="false"
                 android:focusable="false"  >
                 
             </EditText>

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_time"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <EditText
                 android:id="@+id/new_eventTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="none"
                 android:onClick="showTimePickerDialog"
                 android:focusableInTouchMode="false"
                 android:focusable="false" />

             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_location"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <EditText
                 android:id="@+id/new_eventPlace"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="none"
                 android:singleLine="true" />
             

        </LinearLayout>
         
		</ScrollView>