<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkBlue"
    tools:context="francesco.workspace.homeapp.DetailsEventActivity" >

    
   <TableLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:stretchColumns="1" >
	    
	    <FrameLayout
	       android:id="@+id/fragment_content"
	       android:layout_width="match_parent"
	       android:layout_height="350dp" >
			       
		    <ImageView
		        android:id="@+id/mapNotAvaible"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:adjustViewBounds="true"
		        android:contentDescription="@string/event_creator"
		        android:src="@drawable/sicily_map" 
		        android:visibility="invisible"/>
          
	    </FrameLayout>
 
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/white_text"
	        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/CreatorImage_event"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_marginTop="20dp"
	            android:layout_marginBottom="20dp"
	            android:contentDescription="@string/event_creator"
	            android:src="@drawable/people_black" />

	        <View
	            android:id="@+id/item_separator"
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/lvDividerColor" />
	        
			<RelativeLayout
			    android:layout_width="209dp"
			    android:layout_height="match_parent" >
	        	
			    <TextView
		            android:id="@+id/subjectEvent"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="15dp"
		            android:layout_marginLeft="3dp"
		            android:text="@string/event_Subject"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textSize="22sp" />
			    
				<TextView
		            android:id="@+id/creatorEvent"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		       		android:layout_below="@+id/subjectEvent"
		       		android:layout_marginTop="7dp"
		            android:layout_marginLeft="3dp"
		            android:text="@string/event_creator"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textSize="22sp" />
			    
				<TextView
		            android:id="@+id/dataEvent"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
        			android:layout_below="@+id/creatorEvent" 
      				android:layout_marginTop="7dp"   
		            android:layout_marginLeft="3dp"
		            android:text="@string/date_event"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textSize="22sp" />
				
		        <TextView
		            android:id="@+id/hourEvent"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="7dp"
        			android:layout_below="@+id/creatorEvent"
        			android:layout_toRightOf="@id/dataEvent"
   					android:layout_marginLeft="5dp"
		            android:text="@string/hour_event"
		            android:textAppearance="?android:attr/textAppearanceMedium"
		            android:textSize="22sp" />
			</RelativeLayout>
			
			<RelativeLayout 
		       	android:layout_width="match_parent"
		        android:layout_height="match_parent" >

			 <ImageView
			     android:id="@+id/info_button"
			     android:layout_width="70dp"
			     android:layout_height="70dp"
			     android:layout_centerHorizontal="true"
			     android:layout_centerVertical="true"
			     android:contentDescription="Event Informations"
			     android:layout_marginRight="20dp"
			     android:src="@drawable/info_64_black"
	      	     android:clickable="true"
	      	     android:onClick="infoClick" />
				    
		    </RelativeLayout>

	    </LinearLayout>
	  	<RelativeLayout
			  	android:layout_width="match_parent"
	        	android:layout_height="match_parent">
			<View
	            android:id="@+id/item_separator3"
	            android:layout_width="match_parent"
	            android:layout_height="2dp"
	            android:background="@color/lvDividerColor" />
					
			<TextView
	            android:id="@+id/declineButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	           	android:layout_marginTop="18dp"
	           	android:layout_marginRight="18dp"
	           	android:paddingBottom="18dp"
				android:layout_alignParentRight="true"
	            android:text="Decline"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="28sp"
	            android:textColor="@color/redViolet"
	            android:clickable="true"
	            android:onClick="refuseClick"  />
		
			<TextView
	            android:id="@+id/acceptButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	           	android:layout_marginTop="18dp"
	           	android:layout_marginRight="30dp"
	           	android:paddingBottom="18dp"
				android:layout_toLeftOf="@id/declineButton"
	            android:text="Accept"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="28sp"
	            android:textColor="@color/redViolet"
	            android:clickable="true"
	            android:onClick="acceptClick"  />
			
				
	    </RelativeLayout>
         

	    
    </TableLayout>
       
</ScrollView>
